--- a/login.html
+++ b/login.html
@@ -1,17 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Логін</title>
+    <title>Вхід</title>
 </head>
 <body>
-    <h1>Вхід</h1>
-    <form method="POST">
+    <h2>Вхід</h2>
+    <form method="post">
         {% csrf_token %}
         {{ form.as_p }}
         <button type="submit">Увійти</button>
     </form>
-    <a href="{% url 'home' %}">На головну</a>
+    <a href="{% url 'register' %}">Ще не зареєстровані? Реєструйтесь</a>
 </body>
 </html>
