--- a/register.html
+++ b/register.html
@@ -1,17 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Реєстрація</title>
 </head>
 <body>
-    <h1>Реєстрація</h1>
-    <form method="POST">
+    <h2>Реєстрація</h2>
+    <form method="post">
         {% csrf_token %}
         {{ form.as_p }}
         <button type="submit">Зареєструватися</button>
     </form>
-    <a href="{% url 'home' %}">На головну</a>
+    <a href="{% url 'login' %}">Уже маєте акаунт? Увійдіть</a>
 </body>
 </html>
