--- a/home.html
+++ b/home.html
@@ -3,17 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Головна</title>
+    <title>Головна сторінка</title>
 </head>
 <body>
-    <h1>Головна сторінка</h1>
-    {% if user.is_authenticated %}
-        <p>Привіт, {{ user.username }}!</p>
-        <a href="{% url 'logout' %}">Вийти</a>
-    {% else %}
-        <p>Ви не увійшли в систему.</p>
-        <a href="{% url 'login' %}">Увійти</a> |
-        <a href="{% url 'register' %}">Реєстрація</a>
-    {% endif %}
+    <h1>Ласкаво просимо на головну сторінку!</h1>
 </body>
 </html>
