--- a/login.html
+++ b/login.html
@@ -1,15 +1,24 @@
 <!DOCTYPE html>
-<html>
+<html lang="uk">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Вхід</title>
 </head>
 <body>
     <h2>Вхід</h2>
-    <form method="post">
+    <form method="POST">
         {% csrf_token %}
         {{ form.as_p }}
+        <div>
+            <label for="id_email">Email:</label>
+            <input type="email" name="email" id="id_email" required>
+        </div>
+        <div>
+            <label for="id_password">Пароль:</label>
+            <input type="password" name="password" id="id_password" required>
+        </div>
         <button type="submit">Увійти</button>
     </form>
-    <a href="{% url 'register' %}">Ще не зареєстровані? Реєструйтесь</a>
 </body>
 </html>
