--- a/register_dz20.html
+++ b/register_dz20.html
@@ -1,22 +1,22 @@
 <form method="POST" action="{% url 'register' %}">
     {% csrf_token %}
 
-    <div class="form-group">
+    <div>
         <label for="id_username">Ім'я користувача</label>
         <input type="text" name="username" id="id_username" required autocomplete="username">
     </div>
 
-    <div class="form-group">
+    <div>
         <label for="id_email">Email</label>
         <input type="email" name="email" id="id_email" required autocomplete="email">
     </div>
 
-    <div class="form-group">
+    <div>
         <label for="id_password1">Пароль</label>
         <input type="password" name="password1" id="id_password1" required autocomplete="new-password">
     </div>
 
-    <div class="form-group">
+    <div>
         <label for="id_password2">Повторіть пароль</label>
         <input type="password" name="password2" id="id_password2" required autocomplete="new-password">
     </div>
